--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@el3um4s/typescript-npm-package-starter",
-  "version": "1.0.0",
-  "description": "Typescript NPM Package Starter",
+  "name": "@el3um4s/ipc-for-electron-chokidar",
+  "version": "0.0.1",
+  "description": "Allow the renderer to use chokidar (Minimal and efficient cross-platform file watching library)",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/el3um4s/typescript-npm-package-starter.git"
+    "url": "git+https://github.com/el3um4s/ipc-for-electron-chokidar.git"
   },
   "files": [
     "lib/**/*"
@@ -27,8 +27,21 @@
   "keywords": [
     "typescript",
     "npm",
-    "template",
-    "ts"
+    "electron",
+    "electronjs",
+    "node",
+    "nodejs",
+    "ts",
+    "ipc",
+    "inter-process-communication",
+    "chokidar",
+    "fs",
+    "watch",
+    "watchFile",
+    "watcher",
+    "watching",
+    "file",
+    "fsevents"
   ],
   "author": "Samuele C. De Tomasi",
   "license": "MIT",
@@ -43,15 +56,18 @@
     }
   ],
   "bugs": {
-    "url": "https://github.com/el3um4s/typescript-npm-package-starter/issues"
+    "url": "https://github.com/el3um4s/ipc-for-electron-chokidar/issues"
   },
-  "homepage": "https://github.com/el3um4s/typescript-npm-package-starter#readme",
+  "homepage": "https://github.com/el3um4s/ipc-for-electron-chokidar#readme",
   "devDependencies": {
+    "@el3um4s/ipc-for-electron": "^1.0.2",
+    "@el3um4s/to-try": "^0.0.8",
     "@types/jest": "^28.1.7",
     "@types/node": "^18.7.6",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "ansi-regex": ">=6.0.1",
+    "electron": "^20.0.3",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
@@ -61,5 +77,8 @@
     "jest": "^28.1.3",
     "ts-jest": "^28.0.8",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "chokidar": "^3.5.3"
   }
 }
